# JarvisX

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  personal_memory.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  test.text
