[package]
name = "Jarvis"
version = "0.1.0"
description = "AI Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "cluely_pet_project_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = [] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-global-shortcut = "2.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15.7"

windows = { version = "0.56.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "native-tls"] }

regex = "1.11.1"
